# coursera-c-plus-plus-modern-development

./: .gitignore  CMakeLists.txt  README.md  _main.cpp  main.cpp  reload.h  test_runner.cpp  test_runner.h
coursera/: README.md
coursera/cpp-white-belt/week_01/: 05_gcd.cpp
coursera/cpp-white-belt/week_02/: 06_Reverse.cpp  08_Temperature.cpp  10_todo.cpp  13_buses_and_stops.cpp  14_buses_2.cpp  18_buses_3.cpp
coursera/cpp-white-belt/week_03/: 01_sort.cpp  03_SortedStrings.cpp  07_Person_3.cpp  08_Incognizable.cpp
coursera/cpp-white-belt/week_04/: 04_file_01.cpp  04_file_02.cpp  05_file.cpp  06_table.cpp  07_students_list.cpp  12_time_server.cpp
coursera/cpp-yellow-belt/week01/: 02_Temperature.cpp  03_mass_blocks.cpp  05_TaskInfo.cpp  06_Sqr.cpp
leetcode/easy/13. Roman to Integer/: Solution.cpp
leetcode/easy/7. Reverse Integer/: Solution.cpp
leetcode/easy/9. Palindrome Number/: Solution.cpp
leetcode/easy/Implement strStr()/: Solution.cpp
leetcode/easy/Two Sum/: Solution.cpp
leetcode/medium/: Solution.cpp
leetcode/medium/2. Add Two Numbers/: Solution.cpp
leetcode/medium/8. String to Integer (atoi)/: Solution.cpp
src/coursera/week_01/: 01_a_b.cpp  02_minimal_string.cpp  03_quadratic_equation.cpp  04_second_occurrence.cpp  05_gcd.cpp  06_binary.cpp  07_devision.cpp  11_a_b.cpp  12_minimal_string.cpp  13_quadratic_equation.cpp  14_second_occurrence.cpp  15_gcd.cpp  16_binary.cpp  17_devision.cpp  18_price.cpp  19_even_numbers.cpp
src/coursera/week_02/: 01_factorial.cpp  02_is_palindrom.cpp  06_Reverse.cpp  (+10 more)
src/cpp-white-belt/: final_white_belt.cpp
(+54 files in other folders)
